Theming: login page (in progress)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -74,6 +74,8 @@ $font-size-h3:                  1.5rem;
 $font-size-h4:                  1.25rem;
 $font-size-h5:                  1rem;
 $font-size-h6:                  $font-size-base;
+$lead-font-size:                1rem;
+$lead-font-weight:              $font-weight-light;
 
 $display1-size:                 5.5rem;
 $display2-size:                 5rem;
