--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.cshtml
@@ -53,7 +53,7 @@
 		@* Description *@
         @if (!String.IsNullOrWhiteSpace(Model.Description))
         {
-            <div class="manufacturer-description text-body">
+            <div class="manufacturer-description lead">
                 @Html.Raw(Html.CollapsedText(Model.Description))
             </div>
         }
