--- a/src/Presentation/SmartStore.Web/Views/Customer/Partials/_ExternalAuthentication.AssociateMessage.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Partials/_ExternalAuthentication.AssociateMessage.cshtml
@@ -1,13 +1,15 @@
-﻿@{
+﻿@using SmartStore.Services.Authentication.External;
+
+@{
     var openAuthParameters = ExternalAuthorizerHelper.RetrieveParametersFromRoundTrip(false);
 }
-@using SmartStore.Services.Authentication.External;
+
 @if (openAuthParameters != null)
 {
     <div class="alert alert-warning external-auth-association">
-        @T("Account.AssociatedExternalAuth.YourAccountWillBeLinkedTo") <span class="identifier">@openAuthParameters.ExternalIdentifier</span>
+        @T("Account.AssociatedExternalAuth.YourAccountWillBeLinkedTo") <strong class="identifier">@openAuthParameters.ExternalIdentifier</strong>
 		<a href="@Url.Action("RemoveParameterAssociation", "ExternalAuthentication", new { ReturnUrl = Request.Url.ToString() })" class="remove" rel="nofollow">
-			(@T("Common.Remove"))
+			@T("Common.Remove")
 		</a>            
     </div>
 }
