Theming: fixed inline check alignment

--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/Footer.cshtml
@@ -163,14 +163,14 @@
 									<div class="form-check form-check-inline">
 										<label class="form-check-label">
 											<input class="form-check-input" type="radio" id="newsletter-subscribe" value="newsletter-subscribe" name="optionsRadios" checked="checked">
-											@T("Newsletter.Subscribe")
+											<span>@T("Newsletter.Subscribe")</span>
 										</label>
 									</div>
 
 									<div class="form-check form-check-inline">
 										<label class="form-check-label">
 											<input class="form-check-input" type="radio" id="newsletter-unsubscribe" value="newsletter-unsubscribe" name="optionsRadios">
-											@T("Newsletter.Unsubscribe")
+											<span>@T("Newsletter.Unsubscribe")</span>
 										</label>
 									</div>
 								</div>
