--- a/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
@@ -30,13 +30,13 @@
 					<div class="form-check form-check-inline">
 						<label class="form-check-label">
 							@Html.RadioButton("Gender", "M", (Model.Gender == "M"), new { @class = "form-check-input", id = "gender-male" })
-							@T("Account.Fields.Gender.Male")
+							<span>@T("Account.Fields.Gender.Male")</span>
 						</label>
 					</div>
 					<div class="form-check form-check-inline">
 						<label class="form-check-label">
 							@Html.RadioButton("Gender", "F", (Model.Gender == "F"), new { @class = "form-check-input", id = "gender-female" })
-							@T("Account.Fields.Gender.Female")
+							<span>@T("Account.Fields.Gender.Female")</span>
 						</label>
 					</div>
                 </div>
