--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -52,6 +52,7 @@ $facet-selection-color:             darken($brand-success, 15%);
     height: 100%;
     padding: 0 0.25rem;
     border-radius: 0 2px 2px 0;
+    box-shadow: none;
 }
 
 .instasearch-icon {
