--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -130,7 +130,7 @@
         <div class="row">
             <div class="col-sm-9">
                 <dl class="dl-horizontal row">
-                    <dt class="col-sm-4">@T("Order.Order#"):</dtclass="col-sm-4">
+                    <dt class="col-sm-4">@T("Order.Order#"):</dt>
                     <dd class="col-sm-8">@Model.OrderNumber</dd>
 
                     <dt class="col-sm-4">@T("Order.OrderDate"):</dt>
