Theming: password recovery stuff

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -95,6 +95,10 @@ header {
     overflow-x: hidden;  
 }
 
+#content-wrapper {
+    min-height: 600px;
+}
+
 .page-main {
     position: relative;
     z-index: 1;
