--- a/src/Presentation/SmartStore.Web/Views/Customer/Login.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Login.cshtml
@@ -64,7 +64,7 @@
 					{
 						<div class="form-group">
 							<div class="input-group input-group-lg has-icon">
-								@Html.TextBoxFor(m => m.Email, new { @class = "email form-control", placeholder = Html.DisplayNameFor(m => m.Email) })
+								@Html.TextBoxFor(m => m.Email, new { @class = "email form-control", type = "email", placeholder = Html.DisplayNameFor(m => m.Email) })
 								<span class="input-group-icon">
 									<i class="icm icm-envelope-open"></i>
 								</span>
