--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
@@ -8,35 +8,31 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1 class="h3">@T("Account.PasswordRecovery")</h1>
+        <h1 class="font-weight-400">@T("Account.PasswordRecovery")</h1>
     </div>
 
-    <div class="page-body row">
+    <div class="page-body">
         @if (!String.IsNullOrEmpty(Model.Result))
         {
-            <div class="col-12">
-                <div class="alert alert-success">
-                    @Model.Result
-                </div>
+            <div class="alert alert-success">
+                @Model.Result
             </div>
         }
 
         @if (!Model.SuccessfullyChanged)
-        {
-            using (Html.BeginForm( "Customer", "PasswordRecoveryConfirm", FormMethod.Post, new { @class = "form-horizontal" }))
-            {
-                <div class="container">
-                    <fieldset class="content-group">
-                        @Html.ControlGroupFor(model => model.NewPassword, editorType: InputEditorType.Password, required: true, breakpoint: "md")
-                        @Html.ControlGroupFor(model => model.ConfirmNewPassword, editorType: InputEditorType.Password, required: true, breakpoint: "md")
-                    </fieldset>
+		{
+			using (Html.BeginForm( "Customer", "PasswordRecoveryConfirm", FormMethod.Post, new { @class = "row" }))
+			{
+                <div class="col-12 col-lg-9 col-xl-8">
+					@Html.ControlGroupFor(model => model.NewPassword, editorType: InputEditorType.Password, required: true, breakpoint: "md")
+					@Html.ControlGroupFor(model => model.ConfirmNewPassword, editorType: InputEditorType.Password, required: true, breakpoint: "md")
 
-                    <div class="form-group row">
-                        <div class="col">
-                            <input type="submit" name="set-password" class="btn btn-danger" value="@T("Account.PasswordRecovery.ChangePasswordButton")" />
-                        </div>
-                    </div>
-                </div>
+					<div class="form-group row">
+						<div class="col">
+							<input type="submit" name="set-password" class="btn btn-danger btn-lg" value="@T("Account.PasswordRecovery.ChangePasswordButton")" />
+						</div>
+					</div>
+				</div>
             }
         }
     </div>
