--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecovery.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecovery.cshtml
@@ -8,42 +8,39 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1 class="h3">@T("Account.PasswordRecovery")</h1>
+        <h1 class="font-weight-normal">@T("Account.PasswordRecovery")</h1>
     </div>
 
-    <div class="page-body row">
-        <div class="col-12">
-            @if (!String.IsNullOrEmpty(Model.ResultMessage))
-            {
-                <div class="alert @(Model.ResultState == PasswordRecoveryResultState.Success ? "alert-success" : "alert-danger")" >
-                    @Model.ResultMessage
-                </div>
-            }
-            else
-            {
-                <div class="alert alert-info">
-                    @T("Account.PasswordRecovery.Tooltip")
-                </div>
-            }
-        </div>
+    <div class="page-body">
+        @if (!String.IsNullOrEmpty(Model.ResultMessage))
+        {
+            <div class="alert alert-@(Model.ResultState == PasswordRecoveryResultState.Success ? "success" : "danger")" >
+                @Model.ResultMessage
+            </div>
+        }
+        else
+        {
+            <p class="lead">
+                @T("Account.PasswordRecovery.Tooltip")
+            </p>
+        }
 
-        <div class="col-12">
-            @using (Html.BeginForm())
-            {
-                <fieldset class="content-group">
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Email, new { @class = "col-12 col-form-label required" })
-
-                        <div class="col-12">
-                            <div class="input-group">
-                                @Html.TextBoxFor(model => model.Email, new { @class = "email col-6 form-control" })
-                                <input type="submit" name="send-email" class="btn password-recovery-button" value="@T("Account.PasswordRecovery.RecoverButton")" />
-                            </div>
-                            @Html.ValidationMessageFor(model => model.Email)
-                        </div>
+        @using (Html.BeginForm())
+        {
+            <div class="form-group row mt-4">
+                <div class="col-12 col-lg-8 col-xl-7">
+                    <div class="input-group input-group-lg has-icon">
+						<span class="input-group-icon text-muted">
+							<i class="icm icm-envelope-open" style="line-height: inherit"></i>
+						</span>
+                        @Html.TextBoxFor(model => model.Email, new { @class = "email form-control", type = "email", placeholder = Html.DisplayNameFor(m => m.Email) })
+						<span class="input-group-btn">
+							<input type="submit" name="send-email" class="btn btn-primary password-recovery-button" value="@T("Common.Submit")" />
+						</span>
                     </div>
-                </fieldset>
-            }
-        </div>
+                    @Html.ValidationMessageFor(model => model.Email)
+                </div>
+            </div>
+        }
     </div>
 </div>
